# tokimo-app-dashcam-archive

./: Cargo.toml  README.md  lefthook.yml  tokimo-app.toml
.github/workflows/: ci.yml
migrations/: 20260521000001__init.up.sql  20260626000001__add_source_health_fields.up.sql
src/: app_server.rs  assets.rs  cli.rs  cron_supervisor.rs  handlers.rs  main.rs  orchestrator.rs  watcher_supervisor.rs
src/core/: duration.rs  ffmpeg.rs  grouping.rs  mod.rs  naming.rs  pipeline.rs  report.rs  vfs_source.rs
src/core/encoder/: auto.rs  copy.rs  mod.rs  nvenc.rs  x265.rs
src/db/: mod.rs
src/db/entities/: merge_groups.rs  merge_runs.rs  mod.rs  scan_cache.rs  sources.rs  warnings.rs
src/db/repos/: merge_runs_repo.rs  mod.rs  scan_cache_repo.rs  sources_repo.rs  warnings_repo.rs
ui/: package.json  vite.config.ts
ui/src/: api.ts  dashboard.tsx  dir-picker.tsx  dry-run-modal-window.tsx  history-modal.tsx  history-panel.tsx  history-window.tsx  i18n.ts  index.tsx  modal-bridge.ts  run-panel.tsx  source-card.tsx  source-form.tsx  source-settings-modal.tsx  source-settings-window.tsx  sources-list.tsx  storage-binding.ts
ui/src/components/: VfsBrowserWindow.tsx
ui/src/hooks/: useVfsBrowse.ts
ui/src/i18n/: index.ts
ui/src/shared/: browse-bridge.ts
