[package]
name        = "tokimo-app-dashcam-archive"
version     = "0.1.0"
edition     = "2024"
rust-version = "1.94.0"
license     = "MIT OR Apache-2.0"
description = "Dashcam archive Tokimo app scaffold."
repository  = "https://github.com/tokimo-lab/tokimo-app-dashcam-archive"

[dependencies]
tokimo-bus-client   = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "b68aa99c846fbe9e201df5b6a7ea91d84b642340" }
tokimo-bus-protocol = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "b68aa99c846fbe9e201df5b6a7ea91d84b642340", features = ["axum"] }
tokimo-bus-auth     = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "b68aa99c846fbe9e201df5b6a7ea91d84b642340", features = ["axum"] }
tokimo-bus-cli      = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "b68aa99c846fbe9e201df5b6a7ea91d84b642340" }

anyhow             = "1"
async-stream       = "0.3"
axum               = { version = "0.8", features = ["json"] }
chrono             = { version = "0.4", features = ["serde"] }
clap               = { version = "4", features = ["derive", "env"] }
cron               = "0.15"
filetime           = "0.2"
futures            = "0.3"
mime_guess         = "2"
notify             = "8"
notify-debouncer-mini = "0.7"
regex              = "1"
rust-embed         = { version = "8", features = ["debug-embed"] }
sea-orm            = { version = "2.0.0-rc.37", default-features = false, features = ["sqlx-postgres", "runtime-tokio-rustls", "with-uuid", "with-chrono", "with-json", "macros"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tokio              = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "process", "io-util", "sync", "fs"] }
tokio-stream       = { version = "0.1", features = ["sync"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid               = { version = "1", features = ["v4", "serde"] }
tokimo-vfs = { path = "../../packages/tokimo-package-vfs/packages/fs" }
tokimo-package-ffmpeg = { path = "../../packages/tokimo-package-ffmpeg" }
notify-debouncer-full = "0.7"
tokio-cron-scheduler = "0.15"

[profile.release]
lto       = "thin"
opt-level = 3
strip     = "symbols"
